# pca-viz

./: .gitignore  README.md  app.py  pyproject.toml
pca/: __init__.py  algorithm.py  data.py  visualize.py
